[workspace]
members = ["alvidir", "alvidir-cli", "alvidir-macros"]
resolver = "2"

[workspace.dependencies]
alvidir = { path = "alvidir", default-features = false }
alvidir-macros = { path = "alvidir-macros", default-features = false }
log = { version = "0.4.22", default-features = false }
serde = { version = "1.0.216", default-features = false }
thiserror = { version = "2.0.9", default-features = false }
tracing = { version = "0.1.41", default-features = false }
