[workspace]
members = ["plotline", "plotline-cli"]
resolver = "2"

[workspace.dependencies]
plotline = { path = "plotline", default-features = false }
# plotline-plugin-interval = { path = "plugins/interval", default-features = false }
log = { version = "0.4.25", default-features = false }
serde = { version = "1.0.217", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
tracing = { version = "0.1.41", default-features = false }
