[package]
name = "alvidir-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
alvidir            = {path = "../alvidir"}
anyhow             = "1.0"
clap               = {version = "4.5", features = ["derive", "env", "string"]}
once_cell          = "1.19"
regex              = "1.10"
strum              = "0.26"
strum_macros       = "0.26"
thiserror          = {workspace = true}
tokio              = {version = "1.38", features = ["full"]}
tracing            = "0.1"
tracing-subscriber = "0.3"
trait-make         = {workspace = true}
ignore             = "0.4"

[lib]
name = "alvidir_cli"
path = "src/lib.rs"

[[bin]] 
name     = "alvidir"
path     = "src/main.rs"