[package]
name = "alvidir-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
alvidir = { path = "../alvidir" }
clap = { version = "4.5", features = ["derive", "env", "string"] }
ignore = "0.4"
regex = "1.11.1"
tokio = { version = "1.38", features = ["full"] }
tracing.workspace = true
tracing-subscriber = "0.3.18"
