[package]
name = "alvidir-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
alvidir.workspace = true
anyhow = "1.0.93"
clap = { version = "4.5", features = ["derive", "env", "string"] }
ignore = "0.4"
regex = "1.11.1"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.18"

[lib]
name = "alvidir_cli"
path = "src/lib.rs"

[[bin]]
name = "alvidir"
path = "src/main.rs"