[package]
authors = ["Hèctor Morales <hector.morales.carnice@gmail.com>"]
description = "A graph-based document manager."
edition = "2021"
license = "MIT"
name = "alvidir"
readme = "../README.md"
repository = "https://github.com/hectormrc/plotline"
version = "0.0.1"

[dependencies]
tracing.workspace = true

[features]
# Enables the "fixture" constructor for structs as well as mock implementations
# for traits.
fixtures = []

[lib]
name = "alvidir"
path = "src/lib.rs"
