[package]
edition = "2021"
name    = "plotline-cli"
version = "0.1.0"

[dependencies]
clap            = { version = "4.4.18", features = ["derive", "env", "string"] }
dirs            = "5.0.1"
futures         = "0.3.30"
once_cell       = "1.19.0"
plotline        = { path = "../plotline", features = ["in_memory"] }
plotline-plugin = { path = "../plotline-plugin", features = ["wasm"] }
prettytable-rs  = "0.10.0"
serde           = "1.0.197"
serde_yaml      = "0.9.30"
strum_macros    = "0.26.1"
thiserror       = "1.0.56"

[[bin]]
name = "plot"
path = "src/main.rs"
