[package]
edition = "2021"
name    = "plotline-cli"
version = "0.1.0"

[dependencies]
clap               = { version = "4.5.4", features = ["derive", "env", "string"] }
dirs               = "5.0.1"
futures            = "0.3.30"
once_cell          = "1.19.0"
plotline           = { path = "../plotline", features = ["in_memory"] }
plotline-plugin    = { path = "../plotline-plugin", features = ["wasm"] }
prettytable-rs     = "0.10.0"
serde              = "1.0.201"
serde_yaml         = { git = "https://github.com/hectormrc/serde-yaml.git", branch = "main"}
strum              = "0.26.2"
strum_macros       = "0.26.2"
thiserror          = "1.0.60"
tokio              = { version = "1.37.0", features = ["full"] }
tracing            = "0.1.40"
tracing-subscriber = "0.3.18"

[lib]
name = "plotline_cli"
path = "src/lib.rs"

[[bin]]
name = "plot"
path = "src/main.rs"

