[package]
name = "plotline-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
plotline.workspace = true
# plotline-plugin-interval.workspace = true
anyhow = "1.0.93"
clap = { version = "4.5", features = ["derive", "env", "string"] }
ignore = "0.4"
regex = "1.11.1"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.18"

[lib]
name = "plotline_cli"
path = "src/lib.rs"

[[bin]]
name = "plotline"
path = "src/main.rs"
