[package]
name = "plotline-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.61", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.82"

plotline-plugin = { path = "../plotline-plugin" }
plotline-proto  = { path = "../plotline-proto"}
