[package]
edition = "2021"
name    = "plotline-plugin"
version = "0.1.0"

[dependencies]
byteorder      = { version = "1.5.0", optional = true }
plotline       = { path = "../plotline" }
plotline-proto = { path = "../plotline-proto" }
protobuf       = "3.4.0"
semver         = "1.0.22"
thiserror      = "1.0.56"
wasmer         = { version = "4.2.8", optional = true }
wasmer-wasix   = { version = "0.22.0", optional = true }

[features]
wasm = ["wasmer", "wasmer-wasix", "byteorder"]

[lib]
name = "plotline_plugin"
path = "src/lib.rs"
