[package]
authors     = ["Hèctor Morales <hector.morales.carnice@gmail.com>"]
description = "A plotline manager"
edition     = "2021"
license     = "MIT"
name        = "plotline"
readme      = "../README.md"
repository  = "https://github.com/hectormrc/plotline"
version     = "0.1.0"

[dependencies]
futures   = "0.3.30"
semver    = "1.0.22"
serde     = { version = "1.0.195", features = ["derive", "rc"] } # data parser
thiserror = "1.0.56"
trait-variant = "0.1.2"
uuid      = { version = "1.8.0", features = ["v4"] }

[features]
in_memory = []
fixtures = []

[lib]
name = "plotline"
path = "src/lib.rs"
