[package]
authors     = ["Hèctor Morales <hector.morales.carnice@gmail.com>"]
description = "A plotline manager"
edition     = "2021"
license     = "MIT"
name        = "plotline"
readme      = "../README.md"
repository  = "https://github.com/hectormrc/plotline"
version     = "0.1.0"

[dependencies]
futures       = "0.3.30"
thiserror     = "1.0.60"
tracing       = "0.1.40"
trait-variant = "0.1.2"

[features]
# The fixtures feature enables the "fixture" constructor for structs as well as
# fake implementations for traits.
fixtures = []

[lib]
name = "plotline"
path = "src/lib.rs"
