[package]
authors = ["Hèctor Morales <hector.morales.carnice@gmail.com>"]
description = "A graph-based document manager."
edition = "2021"
license = "MIT"
name = "plotline"
readme = "../README.md"
repository = "https://github.com/hectormrc/plotline"
version = "0.1.0"

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[features]
# Enables the "fixture" constructor for structs as well as mock implementations
# for traits.
fixtures = []

[lib]
name = "plotline"
path = "src/lib.rs"
