[package]
edition = "2021"
name    = "plugin"
version = "0.1.0"

[dependencies]
plotline     = {path = "../plotline"}
protobuf     = {version = "3.4.0", optional = true}
strum        = "0.26.1"
strum_macros = "0.26.1"
thiserror    = "1.0.56"
wasmer       = {version = "4.2.5", optional = true}

[features]
wasm    = ["protobuf", "wasmer"]

[lib]
name = "plotline"
path = "src/lib.rs"
