[package]
name = "experience_is_not_simultaneous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotline-plugin = { path = "../../plotline-plugin" }
plotline-proto = { path = "../../plotline-proto" }
protobuf = "3.4.0"

[lib]
crate-type = ["cdylib"]