[package]
name = "plotline-plugin-interval"
version = "0.1.0"
edition = "2021"

[dependencies]
plotline.workspace = true

[features]
default = ["date"]
# Enables the interval implementation for dates representation.
date = []
# Enables the "fixture" constructor for structs as well as mock implementations
# for traits.
fixtures = []
